--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# H2 Connection
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
 
+#para conseguirmo visualizar o db no navegador /h2-console
+# H2 Client
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#para visualizarmos a consulta do sql no console
+# Show SQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
